--- a/Proyek_Analisis_Data.ipynb
+++ b/Proyek_Analisis_Data.ipynb
@@ -77,6 +77,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Pada analisis data ini, kita akan mengolah data e-commerce yang terdiri dari beberapa tabel: `customers_df`, `orders_df`, `product_df`, dan `order_items_df`. Data tersebut mencakup informasi tentang pelanggan, pesanan, produk, dan item pesanan.\n",
+        "\n",
+        "Pertama-tama, kita memuat data dari file CSV dan menggunakan function `read_csv()`."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
@@ -222,6 +231,13 @@
       },
       "source": [
         "### Assessing Data"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "kemudian menyelidiki struktur dan informasi dasar dari setiap tabel menggunakan method `head()`, `info()`, dan `describe()`"
       ]
     },
     {
@@ -431,6 +447,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Setelah memuat data, langkah selanjutnya adalah membersihkan data dari nilai yang hilang dan tipe data yang salah. Kita menggunakan method `dropna()` untuk menghapus baris yang mengandung nilai NaN dan mengganti tipe data pada kolom date menjadi datetime. Proses ini dapat dilakukan menggunakan method `to_datetime()` yang disediakan oleh library pandas."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 4,
       "metadata": {
@@ -539,6 +562,13 @@
       },
       "source": [
         "### Explore ..."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Setelah data bersih, kita melakukan eksplorasi data dengan menghitung statistik ringkasan, seperti jumlah pelanggan per kota, jumlah pesanan per negara bagian, dll."
       ]
     },
     {
@@ -845,6 +875,13 @@
       },
       "source": [
         "## Visualization & Explanatory Analysis"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Kita juga melakukan visualisasi data menggunakan bar plot untuk menampilkan informasi yang relevan, seperti kategori produk terbaik dan terburuk berdasarkan jumlah pesanan. Selanjutnya, kita menganalisis RFM (Recency, Frequency, Monetary) dari pelanggan. Kita menghitung parameter RFM untuk setiap pelanggan dan membuat visualisasi data dengan menggunakan bar plot untuk menampilkan pelanggan terbaik berdasarkan parameter RFM."
       ]
     },
     {
